# pdf2epub-qa

./: .gitignore  LICENSE  README.md  activate_linux.sh  activate_macos.command  activate_windows.bat  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md
scripts/linux/: start_pdf2epub_qa.sh
scripts/macos/: start_pdf2epub_qa.command
scripts/windows/: start_pdf2epub_qa.bat
src/pdf2epub_qa/: api.py  batch.py  cli.py  converter.py  epub_builder.py  pdf_extractor.py  qa.py  reporting.py  utils.py
tests/: test_api_batch_endpoint.py  test_api_summary.py  test_batch.py  test_integration.py  test_utils.py
